--- a/index.html
+++ b/index.html
@@ -233,20 +233,20 @@
             <div class="see-more">
                 <p><a href="">See More <i class="fas fa-angle-double-right"></i></a></p>
             </div>
-            <!-- </section>
+        </section>
 
         <section class="contenar">
             <div class="laptop">
                 <div class="laptop-img">
-                    <img src="img/laptop.png" alt="">
+                    <img src="img/laptop-3.jpg" alt="">
                 </div>
                 <div class="laptop-dittels">
                     <h2>Best Laptop in low price</h2>
                     <p>we are salling best laptop in chip price.You can also buy laptop for chip price.</p>
-                    <a href="">Visit site</a>
+                    <a href="">Visit site<i class="fas fa-angle-double-right"></i></a>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
 
 </body>
