--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                         </span>
                         <span class="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <p>Flex Tripod Good qulity camara fore profation use.</p>
                     </div>
 
                 </div>
@@ -71,8 +71,8 @@
                         <img src="img/action.png" alt="">
                     </div>
                     <div class="product-dittels">
-                        <h2>Flex Tripod</h2>
-                        <h3>$50.48</h3>
+                        <h2>Action Camera</h2>
+                        <h3>$506</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -81,8 +81,8 @@
                             <i class="fas fa-star-half-alt"></i>
 
                         </span>
-                        <span id="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <span id="ratting">4.09</span>
+                        <p>Action Camera ,low price best proudct and good qulity</p>
                     </div>
 
                 </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="product-dittels">
                         <h2>Airbuds</h2>
-                        <h3>$50.48</h3>
+                        <h3>$248</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -101,8 +101,8 @@
                             <i class="fas fa-star-half-alt"></i>
 
                         </span>
-                        <span id="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <span id="ratting">4.0</span>
+                        <p>Supports with Portable Media Player, Mobile Phone, PC.</p>
                     </div>
 
                 </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="product-dittels">
                         <h2>Vlogging Camera</h2>
-                        <h3>$50.48</h3>
+                        <h3>$504.7</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -121,8 +121,8 @@
                             <i class="fas fa-star-half-alt"></i>
 
                         </span>
-                        <span id="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <span id="ratting">4.30</span>
+                        <p>Best vlogging camera for 2022 · Blackmagic Pocket Cinema Camera 4K · $1,295 at B&H ·</p>
                     </div>
 
                 </div>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="product-dittels">
                         <h2>Drone</h2>
-                        <h3>$50.48</h3>
+                        <h3>$48</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -141,8 +141,8 @@
                             <i class="fas fa-star-half-alt"></i>
 
                         </span>
-                        <span id="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <span id="ratting">4.58</span>
+                        <p>Looking for a camera drone? DJI drones offer incredible drone technology for every user.</p>
                     </div>
 
                 </div>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="product-dittels">
                         <h2>Green Screen</h2>
-                        <h3>$50.48</h3>
+                        <h3>$348.7</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -161,8 +161,9 @@
                             <i class="fas fa-star-half-alt"></i>
 
                         </span>
-                        <span id="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <span id="ratting">4.69</span>
+                        <p>deal for even the tightest of workspaces, Green Screen guarantees a wrinkle-resistant,
+                            chroma-green surface</p>
                     </div>
 
                 </div>
@@ -172,7 +173,7 @@
                     </div>
                     <div class="product-dittels">
                         <h2>Light Setup</h2>
-                        <h3>$50.48</h3>
+                        <h3>$111.1</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -182,7 +183,7 @@
 
                         </span>
                         <span id="ratting">4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <p>A three-point lighting setup is the standard for most basic filming. As the name suggests</p>
                     </div>
 
                 </div>
@@ -192,7 +193,7 @@
                     </div>
                     <div class=" product-dittels">
                         <h2>Photoshoot set</h2>
-                        <h3>$50.48</h3>
+                        <h3>$5021</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -202,7 +203,8 @@
 
                         </span>
                         <span id="ratting">4.79</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <p>Find the perfect Photoshoot Set stock photos and editorial news pictures from Getty Images.
+                        </p>
                     </div>
 
                 </div>
@@ -214,7 +216,7 @@
                     <div class="product-dittels">
 
                         <h2>microphone</h2>
-                        <h3>$50.48</h3>
+                        <h3>$648</h3>
                         <span>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -224,7 +226,7 @@
 
                         </span>
                         <span id="ratting"> 4.99</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <p>A microphone, colloquially called a mic or mike (/malk/), is a device - a transducer </p>
                     </div>
 
                 </div>
@@ -246,6 +248,28 @@
                     <a href="">Visit site<i class="fas fa-angle-double-right"></i></a>
                 </div>
             </div>
+        </section>
+
+        <section class="last">
+            <h2>Influencer products</h2>
+            <p>Copyright <i class="far fa-copyright"></i> 2020 influencer products</p>
+            <p>All rights reserved</p>
+            <span class="last-icon"> <i class="fab fa-instagram">
+
+                </i></span>
+            <span class="last-icon"> <i class="fab fa-twitter"></i></span>
+            <span class="last-icon"><i class="fab fa-facebook"></i></span>
+            <span class="last-icon"> <i class="fab fa-youtube"></i></span>
+
+
+
+
+
+
+
+
+
+
         </section>
     </main>
 
